hphp/hack/test/typecheck/typing_fail_protected_access2.php.exp
File "typing_fail_protected_access2.php", line 18, characters 10-10:
Cannot access this protected member, you don't extend Foo (Typing[4112])
File "typing_fail_protected_access2.php", line 13, characters 29-29:
This member is protected
